# RecSys

./: .gitignore  README.md  pyproject.toml
bench/: ~$NeedGap-Bench.xlsx
need_gap/: .env.example  1_filter_prompts_async.py  2_generate_responses_async.py  3_score_responses.ipynb  3_score_responses.py  4.5_validate_judge.py  4_analyze_results.py  4_score_need_alignment_async.py  5_analyze_results.py  5_score_need_alignment_async.py  6.1_cross_model_rpref.ipynb  6_cross_model_analysis.py  7_judge_robustness.py  config.yaml
need_gap/data/: filtered_prompts.parquet  fully_scored_responses.json  fully_scored_responses.parquet  generated_responses.parquet  scored_responses.parquet
need_gap/docs/: BENCHMARK_INTEGRATION.md  PIPELINE_DOCUMENTATION.md
need_gap/prompts/: literal_response_generator.txt  need_alignment_judge.txt  need_aware_generator.txt  taxonomy_classifier.txt
need_gap/results/: cross_model_analysis.json  judge_robustness.json  judge_validation.json  judge_validation_raw_scores.parquet  qualitative_examples.json  response_examples.txt  statistical_methods.json  table_2.csv  table_2.tex  table_3.csv  table_3.tex  table_4_cross_model.csv  table_5_judge_robustness.csv  top_discrepancies.json
